# uq-plugin-example

./: Backend.cpp  Backend.h  CMakeLists.txt  LICENSE  Plugin.cpp  Plugin.h  Plugin.qml  PluginOptions.qml  README.md  UniDeskPluginInterface.h  plugin-info.json
